# datacenter-manager

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/caddy/: Caddyfile
datacenter_manager/: __init__.py  __main__.py  _version.py  datacenter.py  porkbun.py  service.py
scripts/: update_version.py
